tests/baselines/reference/FunctionDeclaration9_es6.errors.txt
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration9_es6.ts(1,10): error TS9001: Generators are not currently supported.
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration9_es6.ts(2,13): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration9_es6.ts(2,14): error TS9000: 'yield' expressions are not currently supported.


==== tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration9_es6.ts (3 errors) ====
    function * foo() {
             ~
!!! error TS9001: Generators are not currently supported.
      var v = { [yield]: foo }
                ~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
                 ~~~~~
!!! error TS9000: 'yield' expressions are not currently supported.
    }